--- a/main.css
+++ b/main.css
@@ -176,14 +176,11 @@ body {
   color: #00abf0;
 }
 
-
-.portfolio-button
-{
+.portfolio-button {
   text-decoration: none;
   color: #ededed;
 }
-.portfolio-button:hover
-{
+.portfolio-button:hover {
   cursor: pointer;
 }
 
@@ -329,8 +326,7 @@ body {
   transition: 0.3s;
 }
 
-#gallery-label:hover
-{
+#gallery-label:hover {
   color: #00abf0;
   text-shadow: 0px 0px 5px #00abf0;
 }
@@ -355,8 +351,6 @@ body {
   padding: 5px;
   transition: 0.2s linear;
 }
-
-
 
 .gallery-content img:hover {
   cursor: pointer;
@@ -408,7 +402,7 @@ body {
   gap: 100px;
 }
 
-.contacts a { 
+.contacts a {
   font-size: 18px;
   text-decoration: none;
   color: #00abf0;
@@ -421,19 +415,13 @@ body {
   transition: 0.2s;
 }
 
-
-
-.instagram
-{
+.instagram {
   margin-bottom: 40px;
 }
 
-.phone
-{
+.phone {
   margin-bottom: 40px;
 }
-
-
 
 .contacts a:hover {
   color: #081b29;
@@ -449,8 +437,7 @@ body {
   margin-top: 150px;
 }
 
-@media (max-width: 1170px ) {
-
+@media (max-width: 1170px) {
   .header {
     width: 100%;
     padding: 20px 6%;
@@ -461,12 +448,10 @@ body {
     border-bottom: 2px solid #00abf0;
   }
 
-  .navbar
-  {
+  .navbar {
     margin-left: 320px;
   }
 
-  
   .navbar a {
     font-size: 35px;
     color: #ededed;
@@ -477,149 +462,123 @@ body {
     position: relative;
   }
 
-  .flag
-  {
-    margin-left: 350px ;
+  .flag {
+    margin-left: 350px;
     width: 45px;
   }
-  .logo
-  {
+  .logo {
     width: 70px;
   }
 
   .home-content {
-  margin-top: 60px;
-  max-width: 600px;
-  margin-left: 30px;
+    margin-top: 60px;
+    max-width: 600px;
+    margin-left: 30px;
   }
 
-.home-content h1 {
-  font-size: 80px;
-  font-weight: 700;
-  line-height: 1, 2;
-}
+  .home-content h1 {
+    font-size: 80px;
+    font-weight: 700;
+    line-height: 1, 2;
+  }
 
-.home-content h3 {
-  font-size: 60px;
-  font-weight: 700;
-  color: #ffffff;
-}
+  .home-content h3 {
+    font-size: 60px;
+    font-weight: 700;
+    color: #ffffff;
+  }
 
+  .home-content .btn-box {
+    display: flex;
+    justify-content: space-between;
+    width: 345px;
+    height: 50px;
+    margin-top: 50px;
+  }
 
+  .home-content .btn-box a {
+    width: 250px;
+    height: 120px;
+    font-size: 30px;
+    border-radius: 30px;
+  }
 
-.home-content .btn-box {
-  display: flex;
-  justify-content: space-between;
-  width: 345px;
-  height: 50px;
-  margin-top: 50px;
-}
+  .tutel {
+    width: 800px;
+    height: 500px;
+    margin-top: 200px;
+  }
 
-.home-content .btn-box a 
-{
-  width: 250px;
-  height: 120px;
-  font-size: 30px;
-  border-radius: 30px;
-}
+  .down-line {
+    width: 1700px;
+    height: 4px;
+  }
 
-.tutel
-{
-  width: 800px;
-  height: 500px;
-  margin-top: 200px;
-}
+  .home-sci {
+    display: none;
+  }
 
-.down-line
-{
-  width: 1700px;
-  height: 4px;
-}
+  .boxs {
+    display: flex;
+    flex-direction: row;
+    max-width: 2000px;
+    margin-left: 10%;
+    height: 900px;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 1100px;
+    gap: 4rem;
+  }
 
-.home-sci {
-  display: none;
-}
-
-.boxs{
-  display: flex;
-  flex-direction: row;
-  max-width: 2000px;
-  margin-left: 10%;
-  height: 900px;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-bottom: 1100px;
-  gap:4rem;
-}
-
-.box
-{
+  .box {
     width: 45%;
-    
-}
+  }
 
-.box p
-{
-  font-size: 40px ;
-}
+  .box p {
+    font-size: 40px;
+  }
 
-.box h1
-{
-  font-size: 65px;
-  color: #00abf0;
-}
+  .box h1 {
+    font-size: 65px;
+    color: #00abf0;
+  }
 
-.gallery-content
-{
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  margin-left: 35%;
-  width: 100%;
-  height: 100%;
-}
+  .gallery-content {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-left: 35%;
+    width: 100%;
+    height: 100%;
+  }
 
-.gallery-content img {
-  max-width: 1300px;
-  width: 1300px;
-}
-.second-line
-{
-  width: 1700px;
-}
+  .gallery-content img {
+    max-width: 1300px;
+    width: 1300px;
+  }
+  .second-line {
+    width: 1700px;
+  }
 
-#gallery-label {
-  font-size: 100px;
-  margin-left: 70%;
-  color: #00abf0;
-  margin-top: 5%;
-}
+  #gallery-label {
+    font-size: 100px;
+    margin-left: 70%;
+    color: #00abf0;
+    margin-top: 5%;
+  }
 
-.contacts
-{
-  width: 165%;
-  padding-left: 5%;
-}
-.contacts a
-{ 
+  .contacts {
+    width: 165%;
+    padding-left: 5%;
+  }
+  .contacts a {
     font-size: 45px;
     display: flex;
-    justify-content: center; 
-}
+    justify-content: center;
+  }
 
-
-
-
-.third-line
-{
-  width: 1700px;
-}
-
-
-
-
-
-
-
+  .third-line {
+    width: 1700px;
+  }
 }
